# server/src/domain/entity/Todo.js
@@ -1,34 +1,11 @@
 import { v4 as uuidv4 } from 'uuid';
 
 class Todo {
-  constructor({ id = uuidv4(), description, dueDate, priority, isCompleted = 'false' }) {
-    if (!description) {
-      throw new Error('Description is required');
-    }
-
+  constructor({ id = uuidv4(), description, dueDate, priority }) {
     this.id = id;
     this.description = description;
     this.dueDate = dueDate;
     this.priority = priority;
-    this.isCompleted = isCompleted;
-  }
-
-  update({ description, dueDate, priority, isCompleted }) {
-    if (description !== undefined) {
-      this.description = description;
-    }
-    if (dueDate !== undefined) {
-      this.dueDate = dueDate;
-    }
-    if (priority !== undefined) {
-      this.priority = priority;
-    }
-    if (isCompleted !== undefined) {
-      if (isCompleted !== 'true' && isCompleted !== 'false') {
-        throw new Error('isCompleted must be a string "true" or "false"');
-      }
-      this.isCompleted = isCompleted;
-    }
   }
 
   toJSON() {
@@ -37,7 +14,6 @@ class Todo {
       description: this.description,
       dueDate: this.dueDate,
       priority: this.priority,
-      isCompleted: this.isCompleted
     };
   }
 }
